--- a/index.html
+++ b/index.html
@@ -28,17 +28,7 @@
     <div x-data="{open:false}">
       <button
         x-on:click="open = !open"
-        class="
-          border-2
-          boder-gray-100
-          bg-gray-400
-          text-center text-white
-          px-4
-          py-2
-          rounded-lg
-          hover:bg-gray-500
-          focus:shadow-lg focus:shadow-gray-500/50 focus:bg-gray-500
-        "
+        class="border-2 boder-gray-100 bg-gray-400 text-center text-white px-4 py-2 rounded-lg hover:bg-gray-500 focus:shadow-lg focus:shadow-gray-500/50 focus:bg-gray-500"
       >
         Toggle
       </button>
@@ -57,17 +47,7 @@
       </template>
       <button
         @click="dataReady.push(1)"
-        class="
-          border-2
-          boder-gray-100
-          bg-gray-400
-          text-center text-white
-          px-4
-          py-2
-          rounded-lg
-          hover:bg-gray-500
-          focus:shadow-lg focus:shadow-gray-500/50 focus:bg-gray-500
-        "
+        class="border-2 boder-gray-100 bg-gray-400 text-center text-white px-4 py-2 rounded-lg hover:bg-gray-500 focus:shadow-lg focus:shadow-gray-500/50 focus:bg-gray-500"
       >
         Add Number
       </button>
